# rust

./: .gitignore
dare-web/: Cargo.toml  LICENSE-MIT  README.md  package-lock.json
dare-web-svelte/: package-lock.json  package.json  tailwind.config.ts
dare-web-svelte/src/lib/components/bottomNavBar/: BottomNavBar.svelte
dare-web-svelte/src/lib/components/dareForm/: DareForm.svelte
dare-web-svelte/src/lib/components/dareGame/: DareGame.svelte
dare-web-svelte/src/lib/components/sideNavBar/: SideNavBar.svelte
dare-web-svelte/src/routes/: +layout.svelte
dare-web-svelte/src/routes/about/: +page.svelte
dare-web-svelte/src/routes/create/: +page.svelte
dare-web-svelte/src/routes/play/: +page.svelte  +page.ts
dare-web-yew/: README.md  index.html  index.scss
dare-web-yew/src/: app.rs
dare-web-yew/src/components/: mod.rs
dare-web-yew/src/components/base/: html_tag.rs  mod.rs
dare-web-yew/src/components/base/link/: mod.rs
dare-web-yew/src/styling/: _global.scss
dare-web/src/components/: styles.rs
dare-web/src/components/modal/: index.rs
dare-web/src/styling/: _mixins.scss
dare_api/: Cargo.toml  docker-compose.yml
dare_api/entity/: Cargo.toml
dare_api/entity/src/: lib.rs
dare_api/migration/src/: m20231218_034649_initial.rs
dare_api/src/: main.rs  setup.rs
dare_db/: Cargo.toml
dare_db/src/: main.rs
dare_db/src/entities/: prelude.rs
dare_rocket/: Cargo.toml
dare_rocket/migration/src/: lib.rs
dare_rocket/src/: main.rs  setup.rs
dare_rocket/src/entities/: dare.rs
