[package]
name = "i-dare-yew"
version = "0.1.0"
edition = "2021"
description = "A dare generator built on yew"
readme = "README.md"
repository = "https://github.com/jordon0311/rust"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.20"
wasm-logger = "0.2.0"
yew = { version = "0.21", features = ["csr"] }
